<resources>
    <string name="app_name">FULiveAIDemo</string>
    <string name="main_page_title">FU Live Demo 算法版</string>
    <string name="main_page_camera">实时拍摄</string>
    <string name="main_page_photo">图片处理</string>
    <string name="main_page_video">视频处理</string>
    <string name="save_photo_success">保存图片成功！</string>
    <string name="save_photo_failure">保存图片失败！</string>
    <string name="save_video_success">保存视频成功！</string>
    <string name="save_video_failure">保存视频失败！</string>
    <string name="save_video_too_short">视频太短啦！</string>
    <string name="save_video_wait">视频处理中请稍等</string>
    <string name="image_not_exist">所选图片文件不存在</string>
    <string name="wrong_image_format">请选择图片文件</string>
    <string name="config_main_title">人体 AI 技术</string>
    <string name="config_sub_title_face">人脸</string>
    <string name="config_sub_title_human">人体</string>
    <string name="config_sub_title_gesture">手势</string>
    <string name="config_sub_title_seg">分割</string>
    <string name="config_sub_title_action">动作</string>
    <string name="config_item_face_landmarks_75">人脸特征点</string>
    <string name="config_item_face_tongue">舌头检测</string>
    <string name="config_item_face_expression">表情识别</string>
    <string name="config_item_face_emotion">情绪识别</string>
    <string name="config_item_human_landmark">人体关键点</string>
    <string name="config_item_human_skeleton">人体骨骼</string>
    <string name="config_item_human_full">全身</string>
    <string name="config_item_human_half">半身</string>
    <string name="config_item_gesture_recognition">手势识别</string>
    <string name="config_item_seg_portrait">人像分割</string>
    <string name="config_item_seg_hair">头发分割</string>
    <string name="config_item_seg_head">头部分割</string>
    <string name="config_item_action_recognition">动作识别</string>
    <string name="debug_info">resolution:\n%dx%d\nfps: %d\nframe cost: %dms\nyaw: %.2f\npitch: %.2f\nroll: %.2f</string>
    <string name="track_status_no_human">未检测到人体</string>
    <string name="track_status_no_face">未检测到人脸</string>
    <string name="track_status_no_human_full">未检测到全身，全身入镜试试哦~</string>
    <string name="track_status_no_gesture">未检测到手势</string>
    <string name="btn_reset">重置</string>
    <string name="btn_confirm">确定</string>
    <string name="camera_open_failed">相机打开失败</string>
    <string name="camera_preview_failed">相机预览失败</string>
    <string name="camera_close_failed">相机关闭失败</string>
    <string name="dialog_loading">数据加载中</string>
    <string name="tongue_track_up">舌头上</string>
    <string name="tongue_track_down">舌头下</string>
    <string name="tongue_track_left">舌头左</string>
    <string name="tongue_track_right">舌头右</string>
    <string name="tongue_track_left_up">舌头左上</string>
    <string name="tongue_track_left_down">舌头左下</string>
    <string name="tongue_track_right_up">舌头右上</string>
    <string name="tongue_track_right_down">舌头右下</string>
    <string name="toast_invalid_auth">缺少证书，功能无效</string>
    <string name="text_expression_list_tip">上滑列表滚动</string>
    <string name="emotion_track_neutral">平静</string>
    <string name="emotion_track_surprise">惊讶</string>
    <string name="emotion_track_happy">开心</string>
    <string name="emotion_track_disgust">厌恶</string>
    <string name="emotion_track_angry">愤怒</string>
    <string name="emotion_track_fear">恐惧</string>
    <string name="emotion_track_sad">悲伤</string>
    <string name="emotion_track_confuse">困惑</string>
    <string name="emotion_track_yes">是</string>
    <string name="emotion_track_no">否</string>

</resources>
