<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_page_bg"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/main_page_title"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="88dp"
        android:background="@color/white_percent_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="88.5dp"
        android:src="@drawable/main_top_logo"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_camera"
        android:layout_width="343dp"
        android:layout_height="76dp"
        android:background="@color/main_page_card_bg"
        app:cardBackgroundColor="@color/main_page_card_bg"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="36dp"
            android:src="@drawable/demo_home_icon_live_shooting" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="98dp"
            android:text="@string/main_page_camera"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="33.5dp"
            android:src="@drawable/demo_home_icon_right_click" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_photo"
        android:layout_width="343dp"
        android:layout_height="76dp"
        android:layout_marginTop="30dp"
        android:background="@color/main_page_card_bg"
        app:cardBackgroundColor="@color/main_page_card_bg"
        app:cardCornerRadius="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_camera">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="36dp"
            android:src="@drawable/demo_home_icon_image_processing" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="98dp"
            android:text="@string/main_page_photo"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="33.5dp"
            android:src="@drawable/demo_home_icon_right_click" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_video"
        android:layout_width="343dp"
        android:layout_height="76dp"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:background="@color/main_page_card_bg"
        app:cardBackgroundColor="@color/main_page_card_bg"
        app:cardCornerRadius="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_photo">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="36dp"
            android:src="@drawable/demo_home_icon_image_processing" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="98dp"
            android:text="@string/main_page_video"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="33.5dp"
            android:src="@drawable/demo_home_icon_right_click" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>