<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_config_operation"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/config_main_title"
            android:textColor="@color/text_title"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_top_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="88dp"
            android:background="@color/config_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_top_divider">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/fl_config_face_outline"
                    layout="@layout/inc_config_outline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_config_face"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:scrollbars="none"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fl_config_face_outline" />

                <include
                    android:id="@+id/fl_config_human_outline"
                    layout="@layout/inc_config_outline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintLeft_toLeftOf="@id/rv_config_face"
                    app:layout_constraintRight_toRightOf="@id/rv_config_face"
                    app:layout_constraintTop_toBottomOf="@id/rv_config_face" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_config_human"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:scrollbars="none"
                    app:layout_constraintLeft_toLeftOf="@id/rv_config_face"
                    app:layout_constraintRight_toRightOf="@id/rv_config_face"
                    app:layout_constraintTop_toBottomOf="@id/fl_config_human_outline" />

                <FrameLayout
                    android:id="@+id/fl_config_human_landmarks"
                    android:layout_width="268dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_bg_config_item_classification_normal"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_config_human">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_config_human_landmarks_bg"
                        android:layout_width="128dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/shape_bg_config_item_classification_bg" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_config_human_full"
                        android:layout_width="128dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginStart="4dp"
                        android:gravity="center"
                        android:text="@string/config_item_human_full"
                        android:textColor="@color/color_text_config_classification"
                        android:textSize="12dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_config_human_half"
                        android:layout_width="128dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="4dp"
                        android:gravity="center"
                        android:text="@string/config_item_human_half"
                        android:textColor="@color/color_text_config_classification"
                        android:textSize="12dp" />

                </FrameLayout>

                <include
                    android:id="@+id/fl_config_gesture_outline"
                    layout="@layout/inc_config_outline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_config_human" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_config_gesture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:scrollbars="none"
                    app:layout_constraintLeft_toLeftOf="@id/rv_config_human"
                    app:layout_constraintRight_toRightOf="@id/rv_config_human"
                    app:layout_constraintTop_toBottomOf="@id/fl_config_gesture_outline" />

                <include
                    android:id="@+id/fl_config_seg_outline"
                    layout="@layout/inc_config_outline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_config_gesture" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_config_seg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:scrollbars="none"
                    app:layout_constraintLeft_toLeftOf="@id/rv_config_human"
                    app:layout_constraintRight_toRightOf="@id/rv_config_human"
                    app:layout_constraintTop_toBottomOf="@id/fl_config_seg_outline" />

                <include
                    android:id="@+id/fl_config_action_outline"
                    layout="@layout/inc_config_outline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_config_seg" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_config_action"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:scrollbars="none"
                    app:layout_constraintLeft_toLeftOf="@id/rv_config_human"
                    app:layout_constraintRight_toRightOf="@id/rv_config_human"
                    app:layout_constraintTop_toBottomOf="@id/fl_config_action_outline" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_config_reset"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/shape_bg_config_button_normal"
            android:gravity="center"
            android:text="@string/btn_reset"
            android:textColor="@color/text_classification_normal"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_config_confirm"
            android:layout_width="164dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_bg_config_button_dark"
            android:gravity="center"
            android:text="@string/btn_confirm"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_config_reset"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>